--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -29,12 +29,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Cache .next
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+
       - name: Login to Docker Registry
         uses: docker/login-action@v1
         with:
           registry: registry.docker-box.richardwillis.info
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
+      - name: Update version cache
+        run: |
+          date > VERSION
 
       - name: Build and push docker image
         uses: docker/build-push-action@v2
@@ -57,6 +67,14 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Extract .next cache
+        run: |
+          docker pull registry.docker-box.richardwillis.info/${{ github.repository }}:latest
+          docker run -d --name helper registry.docker-box.richardwillis.info/${{ github.repository }}:latest tail -f /dev/null
+          docker cp helper:/app/.next .
+          docker stop helper
+          docker rm helper
 
   publish-s3:
     name: Publish static assets to S3
