--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "generate-strapi-client": "openapi-generator-cli generate -i http://localhost:1337/openapi.json -g typescript-fetch -t ./src/features/api/typescript-fetch -o ./src/features/api/strapi --additional-properties=typescriptThreePlus=true",
@@ -21,6 +22,7 @@
     "prism-themes": "^1.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "rehype-autolink-headings": "^6.0.0",
     "rehype-slug": "^5.0.0",
     "rehype-stringify": "^9.0.1",
