--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -110,7 +110,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Copy files to the s3 website content bucket
-        run: aws s3 sync .next/static s3://${{ secrets.AWS_S3_BUCKET }}/_next/static
+        run: aws s3 sync .next/static s3://${{ secrets.AWS_S3_BUCKET }}/_next/static --cache-control public,max-age=31536000,immutable --size-only
 
       # - name: Sync static assets to S3
       #   uses: jakejarvis/s3-sync-action@master
