Revert enable http2 in nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -143,8 +143,8 @@ http {
   }
 
   server {
-    listen       80 http2;
-    listen  [::]:80 http2;
+    listen       80;
+    listen  [::]:80;
     server_name  localhost;
 
     root /usr/share/nginx/html;
