--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.7.0",
     "@types/react": "17.0.19",
+    "@vscode/codicons": "^0.0.21",
     "classnames": "^2.3.1",
     "modern-normalize": "^1.1.0",
     "next": "11.1.0",
