--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
+    "postbuild": "prettier out/**/*.html --write",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
@@ -41,6 +42,7 @@
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2"
   }
 }
