--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -10,14 +10,14 @@ on:
 jobs:
   lint-app:
     runs-on: ubuntu-20.04
-    name: Lint app
+    name: Lint & Lighthouse
     steps:
       - uses: actions/checkout@v2.3.4
 
       - name: Set up Node.js
         uses: actions/setup-node@v2.4.0
         with:
-          node-version: 14.15.4
+          node-version: 16
 
       - name: Install NPM Packages
         run: npm ci
@@ -29,6 +29,9 @@ jobs:
         run: npm run build
         env:
           STRAPI_ENDPOINT: ${{ secrets.STRAPI_ENDPOINT }}
+
+      - name: Lighthouse
+        run: npm run lighthouse
 
   lint-dockerfile:
     runs-on: ubuntu-20.04
