--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "remark-external-links": "^9.0.1",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
+    "replace-ext": "^2.0.0",
     "sass": "^1.38.2",
     "typescript": "4.4.2",
     "unified": "^10.1.0"
@@ -37,6 +38,7 @@
     "@openapitools/openapi-generator-cli": "^2.3.10",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "17.0.19",
+    "@types/replace-ext": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
