--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ events {
 # This is only used when you don't override it on a `server` level
 # Default: logs/error.log error
 # https://nginx.org/en/docs/ngx_core_module.html#error_log
-error_log /var/log/nginx/error.log warn;
+error_log /var/log/nginx/error.log crit;
 
 # The file storing the process ID of the main process
 # Default: logs/nginx.pid
@@ -57,6 +57,16 @@ http {
   # Set character encodings.
   include h5bp/media_types/character_encodings.conf;
 
+  # cache informations about FDs, frequently accessed files
+  # can boost performance, but you need to test those values
+  open_file_cache max=200000 inactive=20s;
+  open_file_cache_valid 30s;
+  open_file_cache_min_uses 2;
+  open_file_cache_errors on;
+
+  # allow the server to close connection on non responding client, this will free up memory
+  reset_timedout_connection on;
+
   # Include $http_x_forwarded_for within default format used in log files
   # https://nginx.org/en/docs/http/ngx_http_log_module.html#log_format
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -67,7 +77,8 @@ http {
   # This is only used when you don't override it on a `server` level
   # Default: logs/access.log combined
   # https://nginx.org/en/docs/http/ngx_http_log_module.html#access_log
-  access_log /var/log/nginx/access.log main;
+  # access_log /var/log/nginx/access.log main;
+  access_log off;
 
   # How long to allow each connection to stay idle.
   # Longer values are better for each individual client, particularly for SSL,
@@ -89,6 +100,10 @@ http {
   # Default: off
   # https://nginx.org/en/docs/http/ngx_http_core_module.html#tcp_nopush
   tcp_nopush on;
+
+  tcp_nodelay on;
+
+  sendfile_max_chunk 512k;
 
   # Enable gzip compression.
   include h5bp/web_performance/compression.conf;
