--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "rehype-autolink-headings": "^6.1.0",
+    "rehype-external-links": "^1.0.0",
     "rehype-slug": "^5.0.0",
     "rehype-stringify": "^9.0.1",
-    "remark-external-links": "^9.0.1",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "replace-ext": "^2.0.0",
