Fix lighthouse in ci

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -29,6 +29,7 @@ jobs:
         run: npm run build
         env:
           STRAPI_ENDPOINT: ${{ secrets.STRAPI_ENDPOINT }}
+          ASSET_PREFIX: /
 
       - name: Lighthouse
         run: npm run lighthouse
