--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -8,8 +8,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches: [master]
 #   release:
 #     types: [published]
 
@@ -105,7 +103,7 @@ jobs:
         run: aws s3 sync .next/static s3://${{ secrets.AWS_S3_BUCKET }}/_next/static --cache-control public,max-age=31536000,immutable --size-only
 
       - name: Sync public assets to S3
-        run: aws s3 sync public s3://${{ secrets.AWS_S3_BUCKET }} --cache-control public,max-age=31536000,immutable --size-only
+        run: aws s3 sync public/site-assets s3://${{ secrets.AWS_S3_BUCKET }}/site-assets --cache-control public,max-age=31536000,immutable --size-only
 
       - name: Restart Service
         run: |
