--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint",
     "generate-strapi-client": "openapi-generator-cli generate -i http://localhost:1337/openapi.json -g typescript-fetch -t ./src/features/api/typescript-fetch -o ./src/features/api/strapi --additional-properties=typescriptThreePlus=true",
     "pregenerate-strapi-client": "rimraf ./src/api/strapi",
-    "lighthouse": "npx @lhci/cli autorun --assert.preset=lighthouse:no-pwa"
+    "lighthouse": "npx @lhci/cli autorun"
   },
   "type": "commonjs",
   "dependencies": {
