Fix lighthouse issues

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -31,8 +31,14 @@ jobs:
           STRAPI_ENDPOINT: ${{ secrets.STRAPI_ENDPOINT }}
           ASSET_PREFIX: /
 
-      - name: Lighthouse
-        run: npm run lighthouse
+      - name: Run Lighthouse against a static dist dir
+        uses: treosh/lighthouse-ci-action@v8
+        with:
+          # no urls needed, since it uses local folder to scan .html files
+          configPath: './lighthouserc.json'
+
+      # - name: Lighthouse
+      #   run: npm run lighthouse
 
   lint-dockerfile:
     runs-on: ubuntu-20.04
